Revision history for {{$dist->name}}

{{$NEXT}}

0.07      2020-02-05 21:31:12 -0700
  - Generate ::Install::Files module like Alien::Build::MM
    and Alien::Base::ModuleBuild do (gh#4, gh#6)

0.06      2020-02-05 21:28:25 -0700
  - Bump requirement of Module::Build to 0.37_01 as we need
    that for the dynamic_config property (gh#3)

0.05      2017-09-14 16:35:04 -0400
  - Add alien_test target

0.04      2017-08-23 17:01:53 -0400
  - set x_alienfile meta unless alien_alienfile_meta is false

0.03      2017-07-12 16:45:46 -0400
  - Set perl_module_version runtime property

0.02      2017-03-29 14:29:08 -0400
  - Respect meta->{arch}
  - cleanup _alien directory for distclean

0.01      2017-02-02 13:34:58 -0500
  - initial version