@@ -12,9 +12,11 @@ github_user   = PerlAlien
 installer     = Author::Plicease::MakeMaker
 irc           = irc://irc.perl.org/#native
 test2_v0      = 1
-workflow      = linux
-workflow      = windows
-workflow      = macos
+
+workflow = static
+workflow = linux
+workflow = windows
+workflow = macos
 
 [RemovePrereqs]
 remove = strict
